added button and google font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTG-8">
 	<title>Star Wars RPG</title>
+	<link href='https://fonts.googleapis.com/css?family=Orbitron:400,500' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -20,18 +21,22 @@
 			<div class="col-xs-2 choose-hero">
 				<p class="text-center">Obi-Wan Kenobi</p>
 				<img src="assets/images/obi-wan.jpg">
+				<p class="text-center">120</p>
 			</div>
 			<div class="col-xs-2 choose-hero">
 				<p class="text-center">Luke Skywalker</p>
 				<img src="assets/images/luke-skywalker.jpg">
+				<p class="text-center">100</p>
 			</div>
 			<div class="col-xs-2 choose-hero">
 				<p class="text-center">Darth Sidious</p>
 				<img src="assets/images/darth-sidious.png">
+				<p class="text-center">150</p>
 			</div>
 			<div class="col-xs-2 choose-hero">
 				<p class="text-center">Darth Maul</p>
 				<img src="assets/images/darth-maul.jpg">
+				<p class="text-center">180</p>
 			</div>
 		</div>
 		<div class="pull-left subheader">
@@ -43,6 +48,10 @@
 			<h2>Enemies Available To Attack</h2>
 		</div>
 		<div class="row enemies">
+		</div>
+		<div class="pull-left subheader">
+			<h2>Fight Section</h2>
+			<button type="button" class="btn btn-danger btn-attack">Attack</button>
 		</div>
 		<div class="pull-left subheader">
 			<h2>Defender</h2>
