made the character choices work

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 			<h1>Star Wars RPG!</h1>
 		</div>
 		<div class="row characters">
-			<div class="col-xs-2 choose-hero">
+			<div id= "obi" class="col-xs-2 choose-hero">
 				<p class="text-center">Obi-Wan Kenobi</p>
 				<img src="assets/images/obi-wan.jpg">
 				<p class="text-center">120</p>
 			</div>
-			<div class="col-xs-2 choose-hero">
+			<div id="luke" class="col-xs-2 choose-hero">
 				<p class="text-center">Luke Skywalker</p>
 				<img src="assets/images/luke-skywalker.jpg">
 				<p class="text-center">100</p>
 			</div>
-			<div class="col-xs-2 choose-hero">
+			<div id="sidious" class="col-xs-2 choose-hero">
 				<p class="text-center">Darth Sidious</p>
 				<img src="assets/images/darth-sidious.png">
 				<p class="text-center">150</p>
 			</div>
-			<div class="col-xs-2 choose-hero">
+			<div id="maul" class="col-xs-2 choose-hero">
 				<p class="text-center">Darth Maul</p>
 				<img src="assets/images/darth-maul.jpg">
 				<p class="text-center">180</p>
